@@ -21,7 +21,7 @@ class YumRegistrationForm extends YumUser {
 		$rules = parent::rules();
 		$rules[] = array('username, password, verifyPassword', 'required');
 		$rules[] = array('password', 'compare', 'compareAttribute'=>'verifyPassword', 'message' => Yii::t("UserModule.user", "Retype password is incorrect."));
-		$rules[] = array('verifyCode', 'captcha', 'allowEmpty'=>!extension_loaded('gd')||!Yii::app()->controller->module->allowCaptcha);
+		$rules[] = array('verifyCode', 'captcha', 'allowEmpty'=>!extension_loaded('gd')||!Yii::app()->getModule('user')->enableCaptcha);
 
 		return $rules;
 
